--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ env/
 src/web_routes (1).py
 src/templates/projects (1).html
 src/mcp_server_instance (1).py
+AI_SUMMARY.md
+test-plan.txt
+SUMMARY_DEPLOYMENT.md
