--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi>=0.100.0  # Specify a recent minimum version
-starlette>=0.25.0 # Add starlette explicitly with a recent minimum version
+starlette==0.46.1
 uvicorn[standard]>=0.20.0 # Good to keep this updated too
 python-dotenv
 SQLAlchemy>=2.0 # Assuming you need SQLAlchemy 2 features
