split mcp_server_instance.py

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ src/mcp_server_instance (1).py
 AI_SUMMARY.md
 test-plan.txt
 SUMMARY_DEPLOYMENT.md
+reference_docs/fix_app_lifespan_implementation_plan.md
+reference_docs/cline_task_apr-17-2025_11-07-34-pm.md
+reference_docs/mcp_server_instance_imports_update_plan.md
+/reference_docs
+/reference_docs
+reference_docs/fix_app_lifespan_implementation_plan.md
